--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,11 @@ uuid = "3cea2189-a643-4963-8eb2-92b9fffd8b58"
 authors = ["Yusheng Zhao <yushengzhao2020@outlook.com> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+
 [compat]
+Graphs = "1.12.0"
 julia = "1.6.7"
 
 [extras]
